--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Github Pages</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi san valetin</title>
+    <link rel="stylesheet" href="estilo.css">
+</head>
+<body>
+<div class="card">
+    <h1 class="title">Jade</h1>
+    <h1 class="title">Te gustaria comer hamburguesas conmigo?</h1>
+    <div class="heart">
+        <img src="https://cdn.pixabay.com/animation/2023/09/07/23/29/23-29-39-367_512.gif" alt="Valentine" class="cat img-fluid">
+    </div>
+    <div class="text"></div>
+    <button class="button">SI</button>
+    <button class="button button__negative">NO</button>
+    <button class="button button__error">Una lastima, no acepto un no</button>
+</div>
+<script src="script.js"></script>
+</body>
+</html>
